--- a/templates/base.html
+++ b/templates/base.html
@@ -131,6 +131,7 @@
         nav {
             display: flex;
             align-items: center;
+            justify-content: flex-end;
             gap: 5px;
             flex-wrap: wrap;
             animation: fadeInRight 1s ease-out 0.6s both;
